2006-10-19  Francis Kung  <fkung@redhat.com>

	PR 29510
	* java/awt/image/BufferedImage.java
	(constructor): Updated some properties of default image types.
	* gnu/java/awt/peer/gtk/BufferedImageGraphics.java
	(argb32): Updated field to match default in BufferedImage.

2006-10-18  Roman Kennke  <kennke@aicas.com>

	PR 29419
	* gnu/java/awt/peer/gtk/CairoGraphics2D.java
	(copyArea): Changed size comparison to return when size == 0
	too.
	* javax/swing/JViewport.java
	(paintBackingStore): Check width and height of blitted area
	and only do blit if its > 0.
	(paintBlit): Check width and height of blitted area
	and only do blit if its > 0.

2006-10-18  Roman Kennke  <kennke@aicas.com>

	PR 27091
	* gnu/java/awt/peer/gtk/GtkFramePeer.java
	(maximize): New native method.
	(unmaximize): New native method.
	(iconify): New native method.
	(deiconify): New native method.
	(getState): Implemented.
	(setState): Implemented.
	* gnu/java/awt/peer/gtk/GtkWindowPeer.java
	(oldState): Rename to windowState and made protected, so that
	the FramePeer can access it.
	(postWindowEvent): Handle state change events more gently and
	correctly.
	* java/awt/Frame.java
	(getState): Fetch state from getExtendedState().
	(setExtendedState): Update the peer. Check if the state change
	is actually supported.
	(getExtendedState): Update the state from the peer.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkFramePeer.c
	(maximize): New method.
	(unmaximize): New method.
	(iconify): New method.
	(deiconify): New method.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkWindowPeer.c
	(AWT_FRAME_NORMAL): New macro.
	(AWT_FRAME_ICONIFIED): New macro.
	(AWT_FRAME_MAXIMIZED_BOTH): New macro.
	(window_window_state_cb): Rewritten to handle window state changes
	more gently (mostly on the java side of the world).
	* include/gnu_java_awt_peer_gtk_GtkFramePeer.h: Regenerated.

2006-10-18  Tania Bento  <tbento@redhat.com>

	* java/awt/CardLayout.java: