@@ -1,3 +1,7 @@
+2006-10-20  Francis Kung  <fkung@redhat.com>
+
+	* include/gnu_java_awt_peer_gtk_CairoGraphics2D.h: Added missing constants.
+
 2006-10-19  Francis Kung  <fkung@redhat.com>
 
 	PR 29510
